# genai-playground

./: .gitignore  README.md  constants.py  main.py  pyproject.toml  requirements.txt  utils.py
dalle/: generate.py  outpaint.py
genai_workshop/models/dalle/: generate.py
genai_workshop/models/gemini/: motion.py
genai_workshop/models/py_gpt/: outpaint.py
genai_workshop/models/sd/: classify.py  generate.py  inpaint.py  outpaint.py
models/dalle/: outpaint.py
models/gemini/: generate.py
models/sd/: background.py  classification.py  classify.py  outpaint.py
sd/: background.py  generate.py  inpaint.py  outpaint.py
